Fixed images in line with media queries and repositioned header info and alignment of navbar on collapse

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body {
   color: rgb(254, 236, 200);
 }
 
+
 /* MAIN HEADER SECTION */
 
 .main-header {
@@ -263,18 +264,18 @@ body {
 
 .cell {
   padding: 0;
-  height: auto;
+  height: 300px;
 }
 
-.cell:nth-child(2) {
-  margin: 0;
+.cell:nth-child(2){
+  padding: 0 5px;
 }
-
 
 .img-info {
   width: 100%;
-  height: 300px;
+  height: 100%;
 }
+
 
 
 
@@ -290,7 +291,9 @@ body {
 }
 
 @media only screen and (max-width: 1140px) {
-
+  .cell {
+    height: 225px;
+  }
 }
 
 @media only screen and (max-width: 992px) {
@@ -303,6 +306,11 @@ body {
 
   .navbar .navbar-collapse {
     text-align: center;
+  }
+
+  .navbar-collapse ul li {
+    text-align: center;
+    margin-left: -20px;
   }
 
   .carousel-indicators li {
@@ -324,16 +332,20 @@ body {
   }
   
   .header-button {
-    width: 125px;
-    height: 40px;
-    font-size: 1rem;
+    width: 80px;
+    height: 32px;
+    font-size: 0.6rem;
+  }
+
+  .cell {
+    height: 175px;
   }
 
 }
 
 @media only screen and (max-width: 768px) {
   .header-info {
-    margin-top: -58%;
+    margin-top: -48%;
   }
 
   .header-info h2 {
@@ -346,11 +358,20 @@ body {
     margin: 10px 0;
   }
 
+  .cell:nth-child(2) {
+    margin: 5px 0;
+    padding: 0;
+  }
+
+  .cell {
+    height: 300px;
+  }
+
 }
 
 @media only screen and (max-width: 480px) {
   .header-info {
-    margin-top: -250px;
+    margin-top: -58%;
   }
 
   .header-info h2 {
